welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	rassemblage(); var y = getMondeLargeur(); var z = getMondeHauteur();
	do {for( j <- 1 to y){
		droite();recule();gauche();avance();}}while(n == z)
	for ( n <- 1 to z){
			pint();
		}	
	
}
def rassemblage(){
	var x = getMondeHauteur();var T = new Array[Color](x);
	for (i <- 0 to x-1){
		T(i) = getCouleurSol();avance();
	}
	return T;
}
def pint(){
	var x = getMondeHauteur();val T = rassemblage();
	for ( k <- 0 to x-1){
		setCouleurBrosse(Color.blue);baisseBrosse();leveBrosse();avance()
	}
}
	


